--- a/views/sponsorship.ejs
+++ b/views/sponsorship.ejs
@@ -148,6 +148,15 @@
                             <label for="website">Company Website</label>
                             <input type="url" id="website" name="website" placeholder="https://">
                         </div>
+                        <div class="form-group full-width">
+                            <label for="logo">Company Logo</label>
+                            <div class="file-input-wrapper">
+                                <input type="file" id="logo" name="logo" accept="image/*" class="file-input">
+                                <label for="logo" class="file-input-label">
+                                    <span class="file-text">Upload Company Logo (optional)</span>
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
