--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,8 +33,8 @@
                 <h4 class="footer-subtitle">Quick Links</h4>
                 <ul class="footer-links">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/team-signup">Team Registration</a></li>
-                    <li><a href="/vendors">Vendor Information</a></li>
+                    <li><a href="/teams-registration">Team Registration</a></li>
+                    <!-- <li><a href="/vendors">Vendor Information</a></li> -->
                     <li><a href="/sponsorship">Become a Sponsor</a></li>
                 </ul>
             </div>
@@ -43,9 +43,9 @@
             <div class="footer-section">
                 <h4 class="footer-subtitle">Information</h4>
                 <ul class="footer-links">
-                    <li><a href="/about">About Us</a></li>
+                    <!-- <li><a href="/about">About Us</a></li>
                     <li><a href="/rules">Tournament Rules</a></li>
-                    <li><a href="/schedule">Schedule</a></li>
+                    <li><a href="/schedule">Schedule</a></li> -->
                     <li><a href="/contact">Contact Us</a></li>
                 </ul>
             </div>
