--- a/views/sponsorship.ejs
+++ b/views/sponsorship.ejs
@@ -192,7 +192,7 @@
                                 <span class="payment-note">No fees</span>
                             </div>
                         </label>
-                        <label class="payment-option">
+                        <!-- <label class="payment-option">
                             <input type="radio" name="paymentMethod" value="stripe" required>
                             <div class="payment-card">
                                 <span class="payment-icon">💳</span>
@@ -207,7 +207,7 @@
                                 <span class="payment-name">Zeffy</span>
                                 <span class="payment-note">Optional donation fee</span>
                             </div>
-                        </label>
+                        </label> -->
                     </div>
                 </div>
 
