--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -19,7 +19,7 @@
                     <div class="contact-icon">📧</div>
                     <div class="contact-content">
                         <h3>Email</h3>
-                        <a href="mailto:info@alhudaSPARK.org">info@alhudaSPARK.org</a>
+                        <a href="mailto:info@alhudaspark.org">info@alhudaspark.org</a>
                     </div>
                 </div>
                 <div class="contact-item">
