--- a/views/sponroship-success.ejs
+++ b/views/sponroship-success.ejs
@@ -63,7 +63,7 @@
             <div class="contact-info">
                 <p>If you have any questions, please contact us:</p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:sponsors@alhudaspark.org">sponsors@alhudaspark.org</a><br>
+                    <strong>Email:</strong> <a href="mailto:info@alhudaspark.org">info@alhudaspark.org</a><br>
                     <strong>Phone:</strong> <a href="tel:+13175377245">(317) 537-7245</a>
                 </p>
             </div>
