--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,7 @@
         <!-- Logo/Brand -->
         <div class="nav-brand">
             <a href="/" class="brand-link">
+                <img src="/images/logo_transparent.png" alt="AlHuda SPARK" class="brand-logo">
                 <span class="brand-text">Alhuda SPARK</span>
             </a>
         </div>
